# duo_avoidance

./: CMakeLists.txt  README.md  package.xml
include/: duo_avoidance.hpp
launch/: avoidance.launch
src/: duo_avoidance.cpp
src/node/: duo_avoidance_node.cpp
